--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>net.djhurley</groupId>
     <artifactId>spring-boot-docker-kubernetes-example</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.2.RELEASE</version>git
+        <version>1.5.2.RELEASE</version>
     </parent>
 
     <properties>
@@ -29,6 +29,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.fabric8</groupId>
+            <artifactId>spring-cloud-starter-kubernetes</artifactId>
+            <version>LATEST</version>
         </dependency>
     </dependencies>
 
@@ -61,6 +66,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
